# unifi-controller-api

./: .env.example  CHANGELOG.md  LICENSE  README.md  pyproject.toml  release-please-config.json
.github/: release-drafter.yml
.github/workflows/: ci.yml  docs.yml  publish_to_pypi.yml  python-tests.yml  release-drafter.yml  release-please.yml
docs/: .gitignore  Makefile  README.md  changelog.rst  conf.py  contributing.rst  examples.rst  index.rst  installation.rst  make.bat  usage.rst
docs/_static/: README.md
docs/_templates/: README.md
docs/api/: client.rst  export.rst  models.rst  overview.rst  utilities.rst
tests/: test_api_error_details.py  test_api_response_handling.py  test_csrf_token.py  test_firewall_rules.py  test_live_controller.py  test_package_smoke.py  test_request_timeout.py
unifi_controller_api/: __init__.py  api_client.py  device-models.json  exceptions.py  export.py  logging.py  utils.py
unifi_controller_api/models/: __init__.py  alarm.py  client.py  device.py  event.py  firewall_rule.py  health.py  networkconf.py  portconf.py  rogueap.py  site.py  wlanconf.py
