[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unifi-controller-api"
version = "0.1.0"
description = "A (read only) Python library for interacting with the Unifi Controller API"
readme = "README.md"
authors = [
    {name = "Tyler Woods", email = "tyler@tylermade.net"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: System :: Networking :: Monitoring",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities"
]
requires-python = ">=3.8"

dependencies = [
    "requests",
]

[project.urls]
"Homepage" = "https://github.com/tnware/unifi-controller-api"
"Bug Tracker" = "https://github.com/tnware/unifi-controller-api/issues"

[tool.setuptools]
packages = ["unifi_controller_api"]

    [tool.setuptools.package-data]
    unifi_controller_api = ["device-models.json"]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.12",
    "pytest-mock>=3.10.0",
    "python-dotenv>=1.0.0",
    "ruff>=0.1.1"
]